<resources>

    <string name="app_name">yabee</string>
    <string name="yabee">Yabee</string>

    <string name="info">Info</string>
    <string name="menu_info">Info</string>
    <string name="opensessionfor">Sessão aberta para </string>
    <string name="lastsynch">Última sincronização em </string>
    <string name="yabeeversion">Versão </string>
    <string name="developedBy">Developed By CA Blue Ocean</string>

    <string name="initiativesActivityLabel">Iniciativas</string>
    <string name="deliverablesActivityLabel">Entregas</string>
    <string name="initiativeReportActivityLabel">Report</string>
    <string name="userPrioritizedActivityLabel">Suas prioridades</string>
    <string name="allPrioritizedActivityLabel">Prioridades</string>
    <string name="editUserGroupActivityLabel">Grupo de Usuários</string>

    <string name="notifications">Notificações</string>
    <string name="action_settings">Configurações</string>
    <string name="initiative_resume">Relatório</string>

    <string name="login">Entrar</string>
    <string name="logout">Encerrar a Sessão</string>
    <string name="create_account">Criar Conta</string>
    <string name="create_initiative">Criar Iniciativa</string>
    <string name="name">nome</string>
    <string name="email">email</string>
    <string name="password">senha</string>
    <string name="signup_phrase">Ainda não tem uma conta? Crie uma.</string>
    <string name="title_activity_login">Login</string>
    <string name="type_include_user_email">Digite o e-mail a incluir nesse iniciativa</string>
    <string name="initiative_group">Grupo da iniciativa</string>

    <string name="type_priority_reason">Comentário de priorização</string>

    <string name="identify_yourself">Informe seu usuário e senha, ou crie uma conta!</string>
    <string name="wrongNameOrPwd">Nome de usuário ou senha inválidos.</string>
    <string name="user_already_exists">Ops! Já existe um usuário identificado por este e-mail.</string>
    <string name="all_fields_needed_for_account">Ops! Para criar sua conta todos os campos devem ser preenchidos.</string>
    <string name="all_fields_needed_for_login">Ops! Para criar login informe o e-mail e senha.</string>
    <string name="all_fields_needed_for_initiative">Ops! Para criar a iniciativa todos os campos devem ser preenchidos.</string>
    <string name="all_fields_needed_for_add_user_into_initiative">Ops! Para incluir você precisa preencher o email.</string>
    <string name="initiative_already_exist">Ops! Já existe uma iniciativa com este título. Tente com outro.</string>
    <string name="fields_needed_for_deliverable">Para criar a entrega o título e a data devem ser preenchidos.</string>
    <string name="fields_needed_for_update_deliverable">Para atualizar a entrega o título e a data devem ser preenchidos.</string>
    <string name="unexpected_error">Indisponibilidade de rede ou serviços. Tente mais tarde.</string>

    <string name="hello">Olá </string>
    <string name="welcome">\u2022  Planeje as suas iniciativas e tarefas.\n\u2022  Gerencie grupos de trabalho.\n\u2022  Defina e acompanhe prioridades.</string>
    <string name="touch_screen">Toque na tela para continuar.</string>
    <string name="next">próximo</string>

    <string name="authenticating">Autenticando...</string>
    <string name="synchronizing">Atualizando...</string>

    <string name="menu_synchronize_initiatives">Sincronizar Iniciativas</string>
    <string name="menu_send_message">Enviar Mensagem</string>
    <string name="menu_refresh_messages">Atualizar Mensagens</string>
    <string name="menu_show_messages">Mensagens</string>
    <string name="menu_show_priorities">Minhas Prioridades</string>
    <string name="menu_show_assignment">Minhas Entregas</string>
    <string name="menu_show_group">Todas as Entregas</string>
    <string name="menu_show_forum">Forum</string>
    <string name="menu_show_all_priorities">Prioridades</string>

    <string name="menu_add_initiative">Criar Iniciativa</string>
    <string name="menu_add_deliverable">Criar Entrega</string>
    <string name="menu_prioritize_deliverable">Priorizar</string>
    <string name="menu_toggle_join_deliverable">Seguir</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_finish">Concluir</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_invite">Convidar</string>
    <string name="menu_show_deliverables">Entregas</string>

    <string name="tab_show_opened_deliverables">ABERTAS</string>
    <string name="tab_show_finished_deliverables">CONCLUÍDAS</string>

    <string name="content_activities_empty">0 ATIVIDADES CONCLUÍDAS</string>


    <string name="dialog_delete_initiative">Remover esta iniciativa?\n\nATENÇÃO: A INICIATIVA E TODAS AS ENTREGAS ASSOCIADAS SERÃO APAGADAS!</string>
    <string name="dialog_delete_deliverable">Remover esta entrega?</string>
    <string name="dialog_finish_deliverable">Concluir esta entrega?</string>
    <string name="dialog_prioritize_deliverable">Priorizar esta entrega?</string>
    <string name="dialog_reset_deliverable_priority">Remover a prioridade desta entrega?</string>
    <string name="dialog_confirm">confirmar</string>
    <string name="dialog_cancel">cancelar</string>

    <string name="context_menu_prioritize">Priorizar</string>
    <string name="context_menu_show_details">Detalhes</string>

    <string name="adm">adm</string>
    <string name="demo">demo</string>

    <string name="total_number_of_wi">Total de Entregas:</string>
    <string name="total_number_of_late_wi">Atrasadas:</string>
    <string name="total_number_of_last_day_wi">Vencem hoje:</string>
    <string name="total_number_of_with_admin">Com Adm.:</string>

    <string name="device_not_connect">Dispositivo não conectado à rede</string>
    <string name="synchronizing_operation">\n\nPor favor, aguarde a sincronização de iniciativas.</string>

    <string name="notImplemented">Não disponível</string>
    <string name="demoVersion">versão de demonstração</string>

    <string name="initiativesText">Iniciativas</string>
    <string name="deliverables">Entegas</string>
    <string name="report">Relatório</string>

    <string name="title">Título</string>
    <string name="description">Descrição</string>

    <string name="onTime">NO PRAZO</string>
    <string name="late">EM ATRASO</string>

    <string name="totalPrefix">T:</string>
    <string name="onTimePrefix">P:</string>
    <string name="latePrefix">A:</string>

    <string name="sendEmail">Enviar email</string>
    <string name="share">Compartilhar</string>
    <string name="missingEmailClient">Nenhum aplicativo de email está configurado</string>
    <string name="missingShareClient">Nenhum aplicativo de compartilhamento está configurado</string>
    <string name="emailTo">rcarvalho89@hotmail.com</string>
    <string name="emailSubject">Ya Bee Message</string>
    <string name="emailHeader">Ya Bee status para iniciativa </string>
    <string name="emailFooter">Ya Bee Report.</string>

    <string name="deliverableShareHeader">Ya Bee status para entrega</string>
    <string name="deliverableShareSubject">Ya Bee Message</string>
    <string name="deliverableShareFooter">Ya Bee Report</string>


    <string name="message">Mensagem</string>
    <string name="responsible">Responsável:</string>
    <string name="date">Data:</string>

    <string name="send_message_to_group">Envie mensagem para o grupo.</string>
    <string name="send_message_ok">Mensegem enviada.</string>
    <string name="empty_message_not_permitted">Digite sua mensagem.</string>
    <string name="send_message_error">Invelizmente não foi possível enviar a emsagem devido a problema técnico.</string>
    <string name="message_from">de:</string>
    <string name="onDate">data</string>

    <string name="create_initiative_error">Infelizmente não foi possível criar a iniciativa devido a problema técnico.</string>

    <string name="title_activity_send_message">Enviar mensagem</string>

    <string name="title_activity_show_messages">Caixa de entrada</string>
    <string name="title_activity_show_day_priorities">ShowDayPrioritiesActivity</string>
    <string name="title_activity_sign_up">Criar Conta Yabee</string>
    <string name="title_activity_deliverable_update">Entrega</string>
    <string name="title_activity_show_info">Info</string>
    <string name="title_activity_create_deliverable">Criar Nova Entrega</string>
    <string name="title_activity_edit_deliverable">Editar Entrega</string>
    <string name="title_activity_add_initiative_user">Incluir Usuário</string>

    <string name="button_synchronize">Sincronizar</string>

    <string name="entry_initiative_title">Título da iniciativa</string>
    <string name="entry_deliverable_title">Título da entrega</string>
    <string name="entry_deliverable_description">Descrição </string>
    <string name="entry_deliverable_notes">Notas </string>
    <string name="entry_deliverable_dueDate">Selecione data da entrega</string>


    <string name="deliverable_code">Código </string>
    <string name="deliverable_description">Descrição </string>
    <string name="deliverable_comments">Comentário </string>
    <string name="deliverable_status">Situação </string>
    <string name="deliverable_duedate">Data </string>
    <string name="deliverable_prioritized">Priorizado </string>
    <string name="deliverable_priority_comments">Comentário de priorização </string>
    <string name="deliverable_prioritizedBy">Priorizado por </string>
    <string name="deliverable_value">Valor </string>
    <string name="deliverable_current_user_name">Responsável </string>

    <string name="title_activity_welcome_screen">WelcomeScreenActivity</string>
    <string name="title_activity_create_initiative">CreateInitiativeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="show_opened_fragment">Opened Deliverables</string>
    <string name="show_finished_fragment">Finished Deliverables</string>
    <string name="title_activity_show_deliverables">Entregas</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_edit_user_group">EditUserGroupActivity</string>


</resources>
