<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".OpenView">

    <!-- should appear as action button -->


    <item android:id="@+id/action_assignment"
        android:icon="@drawable/ic_action_assignment"
        android:title="@string/menu_show_assignment"
        android:orderInCategory="210"
        app:showAsAction="always" />

    <item android:id="@+id/action_group"
        android:icon="@drawable/ic_action_group"
        android:title="@string/menu_show_group"
        android:orderInCategory="220"
        app:showAsAction="always" />

    <item android:id="@+id/action_show_all_priorities"
        android:icon="@drawable/ic_action_star"
        android:title="@string/menu_show_all_priorities"
        android:orderInCategory="300"
        app:showAsAction="always" />

    <item android:id="@+id/action_show_forum"
        android:icon="@drawable/ic_action_forum"
        android:title="@string/menu_show_forum"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <!--
    <item android:id="@+id/action_show_messages"
        android:icon="@drawable/ic_action_messages"
        android:title="@string/menu_show_messages"
        android:orderInCategory="500"
        app:showAsAction="never" />
    -->

    <item android:id="@+id/action_synchronize_initiatives"
        android:icon="@drawable/ic_action_cloud_download"
        android:title="@string/menu_synchronize_initiatives"
        android:orderInCategory="600"
        app:showAsAction="never" />

    <item android:id="@+id/action_show_info"
        android:title="@string/menu_info"
        android:orderInCategory="700"
        app:showAsAction="never" />

</menu>
