<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.ca.asap.activity.DeliverablesActivity">


    <item android:id="@+id/action_prioritize"
        android:icon="@drawable/ic_action_check"
        android:title="@string/menu_prioritize_deliverable"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_show_messages"
        android:icon="@drawable/ic_action_messages"
        android:title="@string/menu_show_messages"
        android:orderInCategory="200"
        app:showAsAction="always" />

    <item android:id="@+id/action_toggle_join_deliverable"
        android:icon="@drawable/ic_action_join_star"
        android:title="@string/menu_toggle_join_deliverable"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:orderInCategory="400"
        app:showAsAction="never" />

</menu>
