<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.ca.blueocean.activity.DeliverablesActivity">

    <item android:id="@+id/action_show_messages"
        android:icon="@drawable/ic_action_messages"
        android:title="@string/menu_show_messages"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <!--
    <item android:id="@+id/action_toggle_join_deliverable"
        android:title="@string/menu_toggle_join_deliverable"
        android:orderInCategory="300"
        app:showAsAction="never" />
    -->
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <!--
    <item android:id="@+id/action_conclude_deliverable"
        android:title="@string/menu_conclude"
        android:orderInCategory="500"
        app:showAsAction="never" />

    <item android:id="@+id/action_edit_deliverable"
        android:title="@string/menu_edit"
        android:orderInCategory="600"
        app:showAsAction="never" />
     -->

    <item android:id="@+id/action_delete_deliverable"
        android:title="@string/menu_delete"
        android:orderInCategory="700"
        app:showAsAction="never" />

</menu>
