<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.ca.blueocean.activity.DeliverablesActivity">

    <!--
    <item android:id="@+id/action_show_messages"
        android:icon="@drawable/ic_action_messages"
        android:title="@string/menu_show_messages"
        android:orderInCategory="200"
        app:showAsAction="always" />
    -->

    <!--
    <item android:id="@+id/action_invite"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_invite"
        android:orderInCategory="350"
        app:showAsAction="never" />
        -->

    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item android:id="@+id/initiative_report"
        android:icon="@drawable/ic_show_chart"
        android:title="@string/initiative_resume"
        android:orderInCategory="500"
        app:showAsAction="never" />

    <!--
    <item android:id="@+id/action_edit_initiative"
        android:title="@string/menu_edit"
        android:orderInCategory="600"
        app:showAsAction="never">
    -->

    <item android:id="@+id/action_delete_initiative"
        android:title="@string/menu_delete"
        android:orderInCategory="700"
        app:showAsAction="never" />

</menu>

