<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:showIn="@layout/activity_create_deliverable"
    tools:context="br.com.ca.blueocean.activity.CreateDeliverableActivity"
    android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/titleEditText"
            android:textColor="@color/accent"
            android:hint="@string/entry_deliverable_title"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/descriptionEditText"
            android:textColor="@color/accent"
            android:hint="@string/entry_deliverable_description"
            android:inputType="textCapSentences|textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.16">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/calendarImageView"
            android:src="@mipmap/ic_today_black_24dp"
            android:layout_weight="0.05"
            android:onClick="onCalendarImageClick"
            android:layout_marginTop="40dp"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/entry_deliverable_dueDate"
            android:id="@+id/deliverableDateTextView"
            android:layout_alignBottom="@+id/calendarImageView"
            android:layout_toRightOf="@+id/calendarImageView"
            android:layout_toEndOf="@+id/calendarImageView"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>


</LinearLayout>
