<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.ca.asap.activity.InitiativeReportActivity"
    android:background="@color/activity_background"
    android:clickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Initiative"
        android:id="@+id/initiativeReportTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_number_of_wi"
        android:id="@+id/totalTextView"
        android:layout_above="@+id/lateTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/totalValueTextView"
        android:layout_alignTop="@+id/totalTextView"
        android:layout_toRightOf="@+id/totalTextView"
        android:layout_toEndOf="@+id/totalTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_number_of_late_wi"
        android:id="@+id/lateTextView"
        android:layout_above="@+id/lastDayTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/lateValueTextView"
        android:layout_alignTop="@+id/lateTextView"
        android:layout_toRightOf="@+id/lateTextView"
        android:layout_toEndOf="@+id/lateTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_number_of_last_day_wi"
        android:id="@+id/lastDayTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="99dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/lastDayValueTextView"
        android:layout_alignTop="@+id/lastDayTextView"
        android:layout_toRightOf="@+id/lastDayTextView"
        android:layout_toEndOf="@+id/lastDayTextView" />





    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/totalValueTextView"
        android:layout_below="@+id/initiativeReportTextView"
        android:id="@+id/deliverablesGraphLinearLayout"></LinearLayout>




</RelativeLayout>
